--- a/TraitFinderApp/Pages/WorldTraitFinder.razor
+++ b/TraitFinderApp/Pages/WorldTraitFinder.razor
@@ -328,6 +328,7 @@ else
 		await DataImport.FetchBaseGameData(Http);
 		await DataImport.FetchSpacedOutData(Http);
 		await DataImport.FetchStarmapDestinationData(Http);
+		await DataImport.FetchClustermapDestinationData(Http);
 		await DataImport.FetchMixingData(Http);
 		await DataImport.FetchFailedSeeds(Http);
 
