hex grid bg fix

--- a/TraitFinderApp/Layout/HexGrid.razor
+++ b/TraitFinderApp/Layout/HexGrid.razor
@@ -113,7 +113,7 @@
 		{
 			return asteroid.Name;
 		}
-		return "icons/potato.webp";
+		return "./icons/potato.webp";
 	}
 
 	protected override void OnInitialized()
